# sky_mailing_service

./: .env.example  .gitignore  PASSWORD_RESET_REVIEW.md  README.md  client_fixture.json  mailing_fixture.json  message_fixture.json  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
mailing/fixtures/: mailing_log_fixture.json  mailing_test.json
mailing/management/commands/: fill_data.py  send_mailings.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_mailinglog_options.py  0002_initial.py  0002_remove_mailing_date_end_remove_mailing_date_start_and_more.py  0003_alter_message_options_alter_client_email_and_more.py  0003_mailinglog_client.py  0003_rename_date_mailinglog_attempt_time_and_more.py  0004_alter_client_options_alter_mailing_options.py  0004_alter_client_options_alter_mailing_options_and_more.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_logs.html  message_confirm_delete.html  message_detail.html  (+3 more)
mailing/views/: clients.py  mailing_logs.py  mailings.py  main.py  messages.py
static/css/: base.css
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_email.txt  password_reset_form.html  password_reset_subject.txt
users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
users/fixtures/: users_test.json
users/migrations/: 0001_initial.py  0002_alter_user_country_alter_user_phone.py  0002_alter_user_managers.py  0002_user_is_manager.py  0003_alter_user_options.py  0003_user_country.py
users/views/: manager.py  password_reset.py  user.py
(+31 files in other folders)
