[tool.poetry]
name = "sky-mailing-service"
version = "0.1.0"
description = ""
authors = ["ViktorShadrin <v.viktor.shadrin@gmail.com>"]
readme = "README.md"
packages = [{ include = "sky_mailing_service" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
django = ">=5.2.8,<6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
